gui/note.txt
MenuScreen.java:12: error: method does not override or implement a method from a supertype
    @Override
    ^
MenuScreen.java:37: error: cannot find symbol
      launch(args);
      ^
  symbol:   method launch(String[])
  location: class MenuScreen
2 errors

package gui; import javafx.application.*; import javafx.stage.*; import javafx.scene.*; import javafx.scene.control.*; import javafx.scene.layout.*; import javafx.geometry.*; public class MenuScreen   { @Override public void start(Stage primaryStage) { primaryStage.setTitle("Menu"); HBox hbox = new HBox(10); hbox.setPadding(new Insets(20)); Button tea = new Button("tea"); tea.setPrefWidth(120); tea.setPrefHeight(50); Button coffee = new Button("coffee"); coffee.setPrefWidth(120); coffee.setPrefHeight(50); Button knafah = new Button("knafah"); knafah.setPrefWidth(120); knafah.setPrefHeight(50); Button bsbosh = new Button("bsbosh"); bsbosh.setPrefWidth(120); bsbosh.setPrefHeight(50); hbox.getChildren().addAll(tea, coffee, knafah, bsbosh); Scene scene = new Scene (hbox, 400, 300); primaryStage.setScene(scene); primaryStage.show(); } public static void main(String[] args) { launch(args); } }

